# ccai-ss23-ai-monitoring-tutorial

./: .gitignore  README.md  requirements.txt  setup.cfg
data/graphs/: cloud_cover_hist.html  facilities_map.html  operation_status_hist.html  operation_status_per_power_plant_ts.html
notebooks/: 01_data_matching.ipynb  02_satellite_imagery.ipynb  03_split_data_for_ml.ipynb  04_dataset_loading.ipynb  05_images_download.ipynb  05_model_training.ipynb  06_model_training.ipynb  google_cooling_tower_on_off_data.ipynb
scripts/: download_images.py
src/coal_emissions_monitoring/: constants.py  data_cleaning.py  data_viz.py  dataset.py  ml_utils.py  model.py  satellite_imagery.py  transforms.py
