[metadata]
name = coal-emissions-monitoring
version = 0.0.1
description = A data science project to monitor coal power emissions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AndreCNF/ccai-ss23-ai-monitoring-tutorial

[options]
package_dir =
   = src
packages = find:
python_requires = >=3.7
install_requires =
    overpy
    pandas
    geopandas
    openpyxl
    requests
    folium
    mapclassify
    matplotlib
    plotly
    nbformat>=4.2.0
    pystac-client
    rasterio
    loguru
    tqdm
    torch
    lightning
    kornia
    timm

[options.packages.find]
where=src